@@ -1431,6 +1431,13 @@ extern "C"
             tokens_.insert(OrthancPlugins::Token(OrthancPlugins::TokenType_HttpHeader, "Authorization"));
           }
 
+          if (standardConfigurations.find("volview") != standardConfigurations.end())
+          {
+            uncheckedFolders_.push_back("/volview/");
+
+            tokens_.insert(OrthancPlugins::Token(OrthancPlugins::TokenType_HttpHeader, "Authorization"));
+          }
+
         }
 
         std::string checkedLevelString;
